@@ -2,6 +2,9 @@ Revision history for Pod::Weaver::Section::Support
 
 {{$NEXT}}
 
+	Tweaked the output of the websites so it also includes a descriptive text of the link
+	Add the deps.cpantesters.org website ( deps ) to the website list
+
 1.003
 	Released: 2011-02-24 17:03:11 UTC
 
